@@ -1,20 +1,24 @@
 
 ### Tomcat memory
 
-<a href="https://github.com/GMOD/Apollo/blob/master/docs/Troubleshooting.md">On GitHub</a>
+View <a href="https://github.com/GMOD/Apollo/blob/master/docs/Troubleshooting.md">On GitHub</a>
 
 
-Many times the default memory allowance is too low.
-The memory requirements of WebApollo will depend on the the size of your genome and
-how many instances of Web Apollo you host in the same Tomcat instance, but in general,
-we recommend at least 1g for the heap size and 256m for the permgen size
-as a starting point. Suggested settings are:
+In many ocassions the default memory allowance is too low. The memory requirements of Web Apollo will depend on the the size of your genome and how many instances of Web Apollo you host in the same Tomcat instance, but in general, we recommend at least 1g for the heap size and 256m for the PermGen size as a starting point. Suggested settings are:
 
     export CATALINA_OPTS="-Xms512m -Xmx1g -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled -XX:+UseConcMarkSweepGC -XX:MaxPermSize=256m"
+
+In cases where the assembled genome is highly fragmented, additional tuning of memory requirements and garbage collection will be necessary to maintain the system stable. Below is an example from a research group that maintains over 40 Apollo instances with assemblies that range from 1,000 to 150,000 scaffolds (reference sequences):  
+
+    "-Xmx12288m -Xms8192m -XX:PermSize=256m -XX:MaxPermSize=1024m -XX:ReservedCodeCacheSize=64m -XX:+UseG1GC -XX:+CMSClassUnloadingEnabled -Xloggc:$CATALINA_HOME/logs/gc.log -XX:+PrintHeapAtGC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps"
 
 To use this setting, edit the setenv.sh script in 
 `$TOMCAT_BIN_DIR/setenv.sh` where `$TOMCAT_BIN_DIR` is where the
 directory where the Tomcat binaries reside.
+
+#### Memory fixes for special cases
+Some members of our community have contributed information on how they 
+
 
 ### Tomcat permissions
 
@@ -23,24 +27,9 @@ When deploying your war file to tomcat or another web application server, you ma
 http://tomcat.apache.org/tomcat-7.0-doc/security-howto.html#Non-Tomcat_settings
 
 
-### No refseqs when opening up selectTrack.jsp
-
-
-This problem often indicates that credentials for the LocalDbUserAuthentication script were not initialized properly because only tracks that the user has permissions for will be shown. Please refer to the [quick install guide](Quick_start_guide.md) for details on these steps, paying attention particularly to the set_user_track_permissions.pl script which sets the permissions for which which refseqs a user can access.
-
 ### Getting logged out when entering JBrowse
 
 This often indicates that the add-webapollo-plugin.pl script wasn't run properly, which will update JBrowse's configuration and load the Web Apollo plugin. See the [data generation](Data_loading.md) for details on this step.
-
-
-### No error message from failed Web Apollo login
-
-Web Apollo uses a custom error reporting valve. To setup, add `errorReportValveClass="org.bbop.apollo.web.ErrorReportValve"` as an attribute to the existing <Host> element in tomcat's server.xml (e.g. /var/lib/tomcat7/conf/server.xml)
-
-    <Host name="localhost" appBase="webapps" 
-      unpackWARs="true" autoDeploy="true" 
-      errorReportValveClass="org.bbop.apollo.web.ErrorReportValve">
-    </Host>
 
 
 ### Errors running JBrowse scripts
@@ -53,52 +42,10 @@ If are trying to run the jbrowse binaries but get these sorts of errors, try `in
 
 ##### e.g. "cd: src/main/webapp/jbrowse: No such file or directory"
 
-If you get this error, then you may need to re-run `apollo deploy` or even do a `apollo clean-all && apollo deploy`. You may also want to review the [developers guide](Developer.md) for how to create a precompiled package.
+If you get this error, then you may need to re-run `apollo deploy` or even do a `apollo clean-all && apollo deploy`.
 
 
-### Postgres authentication setup
-
-There are several different types of authentication methods that are used for postgres and sometimes the defaults
-must be customized to be used for your system.
-
-If you get permission denied errors, make sure to review the official PostgreSQL documentation for [pg_hba.conf](http://www.postgresql.org/docs/current/static/auth-pg-hba-conf.html):
-
-The important thing to understand is that there are different types of access methods defined in the pg_hba.conf file:
-
-- local settings (i.e. when you are accessing the database on the command line)
-- host settings (i.e. when you are accessing the database over a socket)
-
-With webapollo, the "host settings" are required for runtime operation, but the "local settings" are also
-important during setup, for example when initializing the database with the user_database_postgresql.sql.
-
-Therefore, it is also important to understand the authentication methods:
-
--   peer - allows shell based logins without a password (can be used for local logins)
--   ident - based off of operating system logins (similar to shell based login but used for host/remote access. can't be used with non-operating system postgres usernames)
--   md5 - basic encrypted password based-logins (recommended for non-operating system usernames)
-
-An ideal pg_hba.conf for WebApollo might have a line for our special local login for the web_apollo_users_admin user, as well as permitting md5 logins over host:
-
-    local   all             web_apollo_users_admin                  md5
-    # IPv4 local connections:
-    host    all             all             127.0.0.1/32            md5
-    # IPv6 local connections:
-    host    all             all             ::1/128                 md5
+### Differences between JBrowse and WebApollo
 
 
-
-### Chado export
-
-You must install chado to use the Chado export feature, and you must also set it up for your organism. If, after setting up chado, and you receive this error:
-
-    java.lang.IllegalArgumentException: entity for parameter binding cannot be null
-        at org.hibernate.impl.AbstractQueryImpl.resolveEntityName(AbstractQueryImpl.java:587)
-        at org.hibernate.impl.AbstractQueryImpl.setEntity(AbstractQueryImpl.java:581)
-        at org.gmod.gbol.simpleObject.io.impl.HibernateHandler.getAllFeaturesBySourceFeature(HibernateHandler.java:166)
-        at org.bbop.apollo.web.dataadapter.chado.ChadoIO.deleteFeatures(ChadoIO.java:164)
-        at org.bbop.apollo.web.dataadapter.chado.ChadoIO.writeFeatures(ChadoIO.java:66)
-        at org.bbop.apollo.web.dataadapter.chado.ChadoJEDatabaseIO.writeFeatures(ChadoJEDatabaseIO.java:31)
-        at org.bbop.apollo.web.dataadapter.chado.ChadoDataAdapter.execute(ChadoDataAdapter.java:134)
-        at org.bbop.apollo.web.dataadapter.chado.ChadoDataAdapter.write(ChadoDataAdapter.java:68)
-
-Then you must also make sure to import your genome into Chado. Refer to the configuration guide for this note on [Chado export](Configure.md#important-note-for-chado-export).
+The "linkTemplate" track configuration parameter in JBrowse is overridden by WebApollo's feature edge matcher and drag and drop functions. It is recommended to use menuTemplate instead.
